--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Image Text Portrait</title>
   </head>
   <body>
-    <h2 class="app-title">CSS PORTRAIT GENERATOR</h2>
+    <h2 class="app-title"></h2>
     <div class="edit-portrait">
       <form id="portrait-form" class="edit-form">
         <div class="container">
